--- a/InSession_DVC_Python_API.ipynb
+++ b/InSession_DVC_Python_API.ipynb
@@ -31,7 +31,7 @@
         "\n",
         "- Create a new GitHub repo\n",
         "- Start a codespace\n",
-        "- Upload data (data/titanic.csv)\n",
+        "- Upload data (data/bike-sharing-dataset.csv)\n",
         "- Create and activate venv\n",
         "- Install packages: <br>```pip install dvc==3.55.2 dvc-ssh==4.1.1 asyncssh==2.18.0```\n",
         "\n",
@@ -66,9 +66,9 @@
       "source": [
         "### **Data Versioning:**\n",
         "\n",
-        "- Add data for dvc tracking: <br>`dvc add data/petimages`\n",
+        "- Add data for dvc tracking: <br>`dvc add data/sharing-dataset.csv`\n",
         "\n",
-        "- Add metadata files for git tracking: <br>`git add data/.gitignore data/petimages.dvc`\n",
+        "- Add metadata files for git tracking: <br>`git add data/.gitignore data/sharing-dataset.dvc`\n",
         "\n",
         "- Commit changes in git: <br>`git commit -m \"Initial data\"`\n",
         "\n",
@@ -91,8 +91,8 @@
         "### **Whenever new data comes in, use the below commands in sequence:**\n",
         "\n",
         "- `dvc status`\n",
-        "- `dvc add data/petimages`\n",
-        "- `git add data/petimages.dvc`\n",
+        "- `dvc add data/sharing-dataset.csv`\n",
+        "- `git add data/sharing-dataset.dvc`\n",
         "- `git commit -m \"dataset updated\"`\n",
         "- `git tag -a v1.x -m \"Dataset v1.x\"`\n",
         "- `dvc push`\n",
